resolved the rest of the review comments